other-vpol/advanced-restrict-image-registries/.chainsaw-test/cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: clusterregistries
  namespace: default
data:
  registries:  "ghcr.io, myregistry"
