other-vpol/advanced-restrict-image-registries/.chainsaw-test/ns-01.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    corp.com/allowed-registries: '["img.corp.com/", "docker.io/"]'
  name: imageregistries-ns01
