other-vpol/advanced-restrict-image-registries/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy01
  namespace: imageregistries-ns01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      initContainers:
      - name: busybox01-init
        image: docker.io/busybox:1.35
      - name: busybox02-init
        image: ghcr.io/busybox:1.35
      containers:
      - name: busybox01
        image: ghcr.io/busybox:1.35
      - name: busybox02
        image: corp.img.io/busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: imageregistries-ns01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          initContainers:
          - name: busybox01-init
            image: docker.io/busybox:1.35
          - name: busybox02-init
            image: ghcr.io/busybox:1.35
          containers:
          - name: busybox01
            image: ghcr.io/busybox:1.35
          - name: busybox02
            image: corp.img.io/busybox:1.35
          restartPolicy: OnFailure
