other-vpol/advanced-restrict-image-registries/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: advanced-restrict-image-registries
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - reason: Succeeded
      status: "True"
    (conditions[?type == 'WebhookConfigured']):
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
