other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: advanced-restrict-image-registries
  annotations:
    policies.kyverno.io/title: Advanced Restrict Image Registries in CEL expressions
    policies.kyverno.io/category: Other in Vpol
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy restricts Pod images to approved registries defined globally in a ConfigMap
      as a single string, newline-separated list, or YAML list with hyphens, and optionally
      at the Namespace level via annotations. Uses contains() for compatibility with Kyverno 1.14.0.
spec:
  validationActions: 
    - Audit
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  variables:
    - name: cm
      expression: >-
        resource.Get("v1", "configmaps", "default", "clusterregistries")
    - name: allContainers
      expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
    - name: nsRegistries
      expression: >-
        namespaceObject.?metadata.?annotations["corp.com/allowed-registries"]
        .orValue("") .split(",").filter(reg, reg != "")
    - name: cmRegistries
      expression: >-
        variables.cm.data[?'registries'].orValue("").split(",").filter(reg, reg != "")
  validations:
    - expression: >-
        variables.allContainers.all(container,
          (has(exceptions.allowedValues) && string(container.image) in exceptions.allowedValues) ||
          (
            variables.cmRegistries.exists(cmRegistry,
              container.image.startsWith(cmRegistry.trim()))
          ) || (
            variables.nsRegistries.exists(nsRegistry,
              container.image.startsWith(nsRegistry.trim()))
          )
        )
      messageExpression: >-
        'This Pod names an image that is not from an approved registry' + variables.nsRegistries.join(',') + '  ' + variables.cmRegistries.join(',')
