other-vpol/advanced-restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: advanced-restrict-image-registries
spec:
  # disable templating because it can cause issues with CEL expressions
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../advanced-restrict-image-registries.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: advanced-restrict-image-registries
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep:
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: ns-01.yaml
    - apply:
        file: cm.yaml
  - name: step-03
    try:
    - apply:
        file: pod-good.yaml
    - create:
        expect:
        - check:
            ($error != null): true
        file: pod-bad.yaml
    - apply:
        file: podcontroller-good.yaml
    - create:
        expect:
        - check:
            ($error != null): true
        file: podcontroller-bad.yaml
